--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <p class="logo-2">JASON STROFF</p>
             </div>
                 <div class="logo-right">
-                    <a href="#" target="_blank" class="icon-1"><iconify-icon icon="mdi:github"></iconify-icon></a>
-                    <a href="#" target="_blank" class="icon-2"><iconify-icon icon="ph:stack-overflow-logo"></iconify-icon></a>
-                    <a href="#" target="_blank" class="icon-3"><iconify-icon icon="ri:linkedin-box-fill"></iconify-icon></a>
+                    <a href="#" target="_blank" class="icon-1"><iconify-icon icon="ri-github-fill"></iconify-icon></a>
+                    <a href="#" target="_blank" class="icon-2"><iconify-icon icon="ri-stack-overflow-line"></iconify-icon></a>
+                    <a href="#" target="_blank" class="icon-3"><iconify-icon icon="ri:linkedin-fill"></iconify-icon></a>
                 </div>
         </div>
     <div class="block-2">
