--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         </div>
       
         
-    <div class="block-3">
+    <section class="block-3">
         <h2 class="second">ABOUT ME</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis interdum ante a porta blandit. Quisque velit tortor, ultricies in quam ut, luctus convallis metus. Nunc vitae felis rutrum, mattis justo quis, bibendum tellus. Integer bibendum eget dolor nec venenatis. Aliquam erat volutpat. Etiam et est vitae turpis accumsan vulputate. Curabitur et vehicula nisl, eu congue dolor. Vivamus nec hendrerit mi Nulla consequat tempor.</p>
-    </div>
+    </section>
     <span class="btn-1">
         <button class="btn">DOWLOAD RESUME</button>
     </span>
