--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Title của Trình</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -22,7 +22,7 @@
                 </div>
         </div>
     <div class="block-2">
-        <img src="./img/img2.jpg" alt="Anh đại diện">
+        <img src="./img/img2.jpg" alt="Ảnh đại diện">
         <section class="title">
             <h1>
                 <span class="title-1"> HI THERE</span>
