--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </tr>
             <tr>
             <td>Experience</td>
-            <td>Projects</td>
+            <td class="title-3">Projects</td>
             <td>Happy cilents</td>
             </tr>
         </table>
