--- a/index.html
+++ b/index.html
@@ -54,6 +54,42 @@
     <span class="btn-1">
         <button class="btn">DOWLOAD RESUME</button>
     </span>
+    <div class="block-4">
+         <div class="skill-left">
+            <span class="title-left-top">CORE SKILLS</span>
+            <table class="title-skill-left">
+                <tr>
+                    <th>JavaScript</th>
+                    <th>Node.js</th>
+                    <th>Express.js</th>
+                    <th>MongoDB</th>
+                </tr>
+                <tr>
+                    <td>Vue.js</td>
+                    <td>React</td>
+                    <td>Sequelize</td>
+                    <td>Github</td>
+                </tr>
+                <tr>
+                    <td>HTML</td>
+                </tr>
+            </table>
+        </div>
+            <div class="skill-right">
+                <span class="title-right-top">OTHER SKILLS</span>
+                <table class="title-skill-right">
+                    <tr>
+                        <th>Storyblok</th>
+                        <th>PWAs</th>
+                        <th>Responsive Web Design</th>
+                    </tr>
+                    <tr>
+                        <td>React</td>
+                        <td>Vuetify</td>
+                    </tr>
+                </table>
+            </div>
+    </div>
 
     
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.1/dist/iconify-icon.min.js"></script>
