--- a/index.html
+++ b/index.html
@@ -90,6 +90,92 @@
                 </table>
             </div>
     </div>
+    <div class="block-5">
+        <section class="work-e-left">
+            <h3><span class="title-fist-center">WORK EXPERIENCE</span></h3>
+            <div class="body-title-first-left">2019 - present</div>
+            <div class="body-title-second-left">Matrix Media Inc</div>
+            <div class="body-title-third-left">Full Stack developer</div>
+            <p class="body-title-four-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>
+            <div class="body-title-five-left">
+                <ul>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                </ul>
+            </div>
+            </section>
+        <section class="work-e-right">
+            <div class="body-title-first-right">2018 - 2019</div>
+            <div class="body-title-sencond-right">Lexind</div>
+            <div class="body-title-third-right">Senior app developer</div>
+            <p class="body-title-four-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>
+            <div class="body-title-five-right">
+                <ul>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
+                </ul>
+            </div>
+        </section>
+    </div>
+        
+
+        </div>
+    </div>
+    <div class="block-6">
+        <h2><span class="lates-work">LATEST WORKS</span></h2>
+        <div class="lates-work-main">
+            <div class="lates-work-body">
+                <span class="lates-work-title">Tripy mobile app</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales.</p>
+                <span class="btn-lates-work-body-main">
+                    <button>DETAILS</button>
+                </span>
+            </div>
+                <div class="lates-work-body-img">
+                    <img src="./img/img3.jpg" alt="Anh minh hoa">
+                </div>
+
+        </div>
+    </div>
+    <div class="block-7">
+        <div class="lates-work-mobile-main">
+            <div class="lates-work-mobile-body">
+                <span class="lates-work-mobile-title">Hello mobile app</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales.</p>
+                <span class="btn-lates-work-mobile-body-main">
+                    <button>DETAILS</button>
+                </span>
+            </div>
+                <div class="lates-work-mobile-body-img">
+                    <img src="./img/img4.jpg" alt="Anh minh hoa">
+                </div>
+
+        </div>
+    </div>
+    <div class="block-8">
+        <div class="lates-work-cookie-main">
+            <div class="lates-work-cookie-body">
+                <span class="lates-work-cookie-title">Hello mobile app</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales.</p>
+                <span class="btn-lates-work-cookie-body-main">
+                    <button>DETAILS</button>
+                </span>
+            </div>
+                <div class="lates-work-cookie-body-img">
+                    <img src="./img/img5.jpg" alt="Anh minh hoa">
+                </div>
+
+        </div>
+    </div>
+    <div class="block-9">
+        <span class="banner-last-first">STAY IN TOUCH</span>
+        <h4 class="banner-last-second">Ready to talk?</h4>
+        <p class="banner-last-third">Feel free to contact us</p>
+        <button class="banner-last-four">LETS TALK</button>
+        <p class="banner-last-five"> @ 2022 All rights reserved. Free minimal bootstrap template by <a href="https://www.designstub.com/" target="_blank" class="btn-design">Designstub</a></p>
+    </div>
+
 
     
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.1/dist/iconify-icon.min.js"></script>
